--- a/index.qmd
+++ b/index.qmd
@@ -20,6 +20,8 @@ editor:
     wrap: 72
 execute: 
   echo: true
+  trust: true
+  # cache: true
 ---
 
 ## Beatriz Milz
@@ -29,6 +31,8 @@ execute:
 -   Co-organizadora da [R-Ladies São Paulo](https://rladies-sp.org)
 -   *Software peer review editor* na [rOpenSci](https://ropensci.org/)
 -   [GitHub Star](https://stars.github.com/profiles/beatrizmilz/)
+
+  <img  src="images/bea.png" style=" position: absolute;top: 0%; right: -10%; width: 40%; z-index: 0;"/>
 
 <center>[![](images/logo-rladies.png){fig-align="center"
 width="20%"}](https://rladies-sp.org/)
@@ -48,9 +52,44 @@ width="25%"}](https://stars.github.com/profiles/beatrizmilz/)</center>
 
 -   Disponível para `R` e `Python`.
 
-<center>![](images/logos/geobr-amarelo.png){fig-align="center"
-width="15%"}![](images/logos/geobr-preto.png){fig-align="center"
-width="15%"}</center>
+<center>
+![](images/logos/geobr-amarelo.png){fig-align="center"
+width="15%"}
+![](images/logos/geobr-preto.png){fig-align="center"
+width="15%"}
+</center>
+
+## 
+
+Fazer um disclaimer: eu programo em R há mais tempo. tem materiais que já fiz sobre isso. deixar links.
+
+
+# Conceitos 
+
+# `geobr`
+
+## Instalação
+
+Para o Python, o `geobr` está disponível no `pip`. 
+
+```{python}
+#| eval: false
+pip install geobr
+```
+
+Instalar outras dependências que precisaremos:
+
+```{python}
+#| eval: false
+pip install pandas geopandas
+```
+
+- Para usar o método `.explore()`: 
+
+```{python}
+#| eval: false
+pip install folium matplotlib mapclassify
+```
 
 
 ##
@@ -58,21 +97,14 @@ width="15%"}</center>
 [![](images/geobr-PyPI.png){fig-align="center"}](https://pypi.org/project/geobr/)
 
 
-## Instalação
 
-```{python}
-#| eval: false
-pip install geobr
-```
 
-### Importando a biblioteca 
+## Importando bibliotecas
 
 ```{python}
 import geobr
-import matplotlib.pyplot as plt
 import pandas as pd
-
-%matplotlib inline
+import geopandas as gpd
 ```
 
 ## Listando funções disponíveis
@@ -83,12 +115,14 @@ geobr.list_geobr()
 
 ## Como consultar a delimitação do Brasil?
 
+Informações retornadas por `geobr.list_geobr()`:
 ```
 Function: read_country
 Geographies available: Country
 Years available: 1872, 1900, 1911, 1920, 1933, 1940, 1950, 1960, 1970, 1980, 1991, 2000, 2001, 2010, 2013, 2014, 2015, 2016, 2017, 2018, 2019, 2020
 Source: IBGE
 ```
+Utilizando a função:
 
 ```{python}
 geo_brasil = geobr.read_country(year = 2020)
@@ -100,27 +134,27 @@ geo_brasil = geobr.read_country(year = 2020)
 geo_brasil.info()
 ```
 
-## Visualizando o mapa
+Informações relevantes:
 
-```{python}
-#| eval: false
-fig, ax = plt.subplots(figsize=(15, 15), dpi=300)
+- Tem apenas 1 linha 
+- Tem uma coluna chamada `geometry`
+- Classe do objeto é `geopandas.geodataframe.GeoDataFrame`
 
-geo_brasil.plot(facecolor="#ffffff", edgecolor="#000000", ax=ax)
+## O que é o geopandas?
 
-ax.axis("off")
 
-fig.savefig("images/brasil_map.png")
-```
+- **GeoPandas** é uma biblioteca Python que estende as funcionalidades do [Pandas](https://pandas.pydata.org/) para dados geoespaciais.
+- Facilita a leitura, manipulação, análise e visualização de dados vetoriais (shapes) dentro de um único ecossistema.
+- Cada linha em um **GeoDataFrame** corresponde a uma entidade geoespacial (por exemplo, um polígono de município).
+- A coluna `geometry` armazena a forma geográfica em si (pontos, linhas ou polígonos).
 
-![](images/brasil_map.png){fig-align="center"}
+[![](images/geopandas_logo_web.svg){fig-align="center" out-width="80%"}](https://geopandas.org/)
 
-## Estados
+## Buscando a delimitação dos estados
 
 ```{python}
 geo_estados = geobr.read_state(year = 2020)
 geo_estados.info()
-
 ```
 
 ## 
@@ -131,17 +165,16 @@ geo_estados.head(n=3)
 
 
 
+## Visualizando
+
+```{python}
+# geo_brasil.plot()
+# geo_brasil.explore()
+```
+
+
 ## Visualizando o mapa
 
 ```{python}
-#| eval: false
-fig, ax = plt.subplots(figsize=(15, 15), dpi=300)
-
-geo_estados.plot(facecolor="#ffffff", edgecolor="#000000", ax=ax)
-
-ax.axis("off")
-
-fig.savefig("images/brasil_estados_map.png")
+# geo_estados.explore()
 ```
-
-![](images/brasil_estados_map.png){fig-align="center"}
